Fix issue where down arrow on "MORE" in topnav overflows
- Would either overflow 100vw (caused scrollbar) or sit above the word

- Fixed by setting explicit line height different than the line height
  of rest of navbar, which was 60px.

--- a/assets/css/_sass/_flexible-nav.scss
+++ b/assets/css/_sass/_flexible-nav.scss
@@ -63,6 +63,7 @@ ul[class*="flexnav"] {
 	color: magenta;
 	span {
 		display: inline-block;
+		line-height: 1rem;
 		transform: rotate(90deg);
 	}
 	&:hover, &:focus {
